apps/services/authelia/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: services
  annotations:
    configmap.reloader.stakater.com/reload: "authelia-config"
  labels:
    app: authelia
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
      - name: redis
        image: redis:5.0.12-alpine
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        resources: {}
      - name: authelia
        image: authelia/authelia:4.29.2
        imagePullPolicy: IfNotPresent
        ports:
        - name: authelia-port
          containerPort: 9091
        startupProbe:
          httpGet:
            scheme: HTTP
            path: /api/state
            port: authelia-port
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 4
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /api/state
            port: authelia-port
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 2
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /api/state
            port: authelia-port
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 5
        resources:
          limits:
            cpu: "1000m"
            memory: 512Mi
          requests:
            cpu: "200m"
            memory: 256Mi
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /app/secrets
          name: secrets
          readOnly: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - authelia
            topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: config-volume
        configMap:
          name: authelia-config
          items:
          - key: configuration.yml
            path: configuration.yml
      - name: secrets
        secret:
          secretName: authelia-secret
          items:
          - key: JWT_SECRET
            path: jwt
          - key: SESSION_SECRET
            path: session
          - key: DB_PASSWORD
            path: psql_password
          - key: LDAP_ADMIN_PASSWORD
            path: ldap_password
