apps/services/authelia/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: services
spec:
  selector:
    app: authelia
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9091
