apps/services/authelia/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: authelia
  namespace: services
  labels:
    app: authelia
  annotations:
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-errors@kubernetescrd,services-traefik-real-ip@kubernetescrd,services-rate-limit@kubernetescrd,services-authelia-headers@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: authelia.technolab.cloud
    external-dns.alpha.kubernetes.io/target: technolab.cloud
spec:
  rules:
  - host: authelia.technolab.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: authelia
          servicePort: 80
  tls:
  - hosts:
    - authelia.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
